Resolves: tdf#90504 0x7 chars in .doc are not always cell/row ends

fdo65094-2.doc shows that a 0x7 isn't always a row/cell end

only a 0x7 that is right at the end of the paragraph range is
a real row/cell end

this I believe will remove the last crashtester .doc crash

Change-Id: I196c33bf253378b02f7b3413fb65c3bef9418a15